# query_lang

./: Cargo.toml
benches/: bench.rs
examples/: example.rs
src/: lib.rs
src/query/: ast.rs  dynamic_object.rs  mod.rs  parser.rs  utils.rs
src/query/ast/: expression.rs  parser.rs
src/query/ast/operators/: mod.rs  parser.rs
src/query/ast/operators/match_operator/: mod.rs
