[package]
name = "query_lang"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[[bench]]
name = "bench"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
serde_json = { version = "1.0.108", features = [] }
derive_more = { version = "1.0.0-beta.6", features = ["from"] }
paste = "1.0.14"
smartstring = "1.0.1"
smallvec = "2.0.0-alpha.1"
hashlink = "0.8.4"
ahash = "0.8.6"

[dev-dependencies]
superluminal-perf = "0.3.0"
criterion = "0.5.1"